Small CSS fixes: cursor:hand, vertical-align: center, etc.

--- a/css/common.css
+++ b/css/common.css
@@ -23,8 +23,7 @@ li {
 }
 
 .link {
-  cursor:pointer;
-  cursor:hand;
+  cursor: pointer;
   color: blue;
   text-decoration: underline;
 }
