--- a/css/map.css
+++ b/css/map.css
@@ -7,7 +7,7 @@
   padding: 2px 5px 2px 5px;
   text-align: center;
   cursor: pointer;
-  vertical-align: center;
+  vertical-align: middle;
   border: 1px dotted black;
 }
 
